--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <html>
 <head>
 	<script src="https://wzrd.in/standalone/baconjs@latest"></script>
+<link href="https://file.myfontastic.com/v535Fdatmh4N4vSUK2zBYM/icons.css" rel="stylesheet">
 </head>
 <body>
-	<span id="clock"></span>
+	<style type="text/css">
+	body {
+		background-color: #d9dade;
+	}
+
+
+
+	#clock { color:black; font-size:3em;
+	font-family:cursive;luto;}
+
+	</style>
+<center>
+	<i class="icon icon-clock" span id="clock"> </i></center></span>
 	<script>
 	function pad(n, width, z) {
 		z = z || '0';
